--- a/src/Frontend/src/css/app.scss
+++ b/src/Frontend/src/css/app.scss
@@ -1,1 +1,21 @@
 // app global css in SCSS form
+
+h1 {
+  font-size: clamp(2.0rem, -0.2rem + 4vw, 3.0rem) !important;
+  font-weight: 600;
+  line-height: clamp(2.2rem, -0.2rem + 4vw, 3.2rem) !important;
+  margin-block-start: 0em;
+  margin-block-end: 0.4em;
+}
+
+h1 span {
+  font-weight: 300;
+}
+
+h2 {
+  font-size: clamp(1.7rem, -0.4rem + 4vw, 2.4rem) !important;
+  font-weight: 400;
+  line-height: clamp(1.9rem, -0.4rem + 4vw, 2.6rem) !important;
+  margin-block-start: 0em;
+  margin-block-end: 0.4em;
+}
